Resolve reflection issues for discovery-service tests.
Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>