@@ -122,6 +122,9 @@ configure(subprojects.findAll {it.name != 'platform'}) {
         jvmArgs '--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
     }
 
     dependencies {
